--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,9 @@
 [core]
 	autocrlf = input
 	editor = /usr/bin/vim
-	pager=less -x4
+#	pager=less -x4
+	pager=more
+#	pager=cat
 
 [user]
 	name = Niklaus Bucher
