--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,9 @@
 [includeIf "gitdir:~/dev/prelogic/"]
 	path = ~/dev/prelogic/.gitconfig
 
+[init]
+	defaultBranch = master
+
 [push]
 	default = current
 [pull]
