--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -32,5 +32,10 @@
     "go.toolsManagement.autoUpdate": true,
     "[markdown]": {
         "editor.defaultFormatter": "yzhang.markdown-all-in-one"
-    }
+    },
+    "python.formatting.provider": "black",
+    "python.formatting.blackArgs": [
+        "--line-length",
+        "160"
+    ]
 }
