duti.config updated

--- a/duti.config
+++ b/duti.config
@@ -5,22 +5,31 @@
 #com.apple.iWork.Numbers     .xlsx   all
 com.microsoft.Excel         .xlsx   all
 
-# SAMPLES
+
+
+
+
+
+# list UTI for files #########
+# $ ls -A1 | while read f; do echo "$f:" && echo -n " -> " &&  mdls "$f" | ggrep -w kMDItemContentType; done
+
+# SAMPLES ###########
+#
 # Set Safari as the default handler for HTML files,
 # set TextEdit as the default handler for files with .patch extensions,
 # and set Firefox as the default handler for feed:// URLs.
 #
 # blank lines and lines beginning with a '#' are ignored
 #
-# bundle id		UTI/ext/MIME type	role
+# bundle id                 UTI/ext/MIME type           role (not needed)
 
-# com.apple.Safari	public.html		all
-# com.apple.TextEdit	.patch			editor
-# com.macromates.textmate public.shell-script all
-# com.macromates.textmate public.unix-executable all
-# com.macromates.textmate com.apple.property-list all
-# org.videolan.vlc .avi all
-# org.videolan.vlc .mkv all
+# com.apple.Safari          public.html                 all
+# com.apple.TextEdit        .patch                      editor
+# com.macromates.textmate   public.shell-script         all
+# com.macromates.textmate   public.unix-executable      all
+# com.macromates.textmate   com.apple.property-list     all
+# org.videolan.vlc          .avi                        all
+# org.videolan.vlc          .mkv                        all
 
 
 # bundle id		URL scheme
