--- a/.gitconfig
+++ b/.gitconfig
@@ -75,6 +75,8 @@
 	xlogext = log --graph --decorate --all --format=format:'%C(yellow)%h%C(reset) %C(bold red)%d%C(reset) %C(green)(%aD)%C(reset) %C(dim green)(%cr)%C(reset) %C(blue)a:%an - c:%cn%C(reset) %n		 %C(dim white)%s%C(reset)'
 	xgrep = "!f() { git grep $1 `git ls-remote | grep -Po '(?<=refs/heads/).*' | xargs -I{} echo origin/{}` -- $2; }; f"
 	xdiff = "!f() { git diff $1^..$1; }; f"
+	xinit = !(git init && git commit --allow-empty -m 'root commit')
+
 	foreach = "!f() { find . -maxdepth 2 -name '.git' | xargs -i{} /bin/bash -c \"echo -e '\\e[1m>>> repo {}\\e[0m'; git --git-dir={} --work-tree={}/.. $@\"; }; f"
 	fe = "!f() { args=\"$@\"; _pwd=`pwd`; find . -maxdepth 2 -name '.git' | sort | while read _d; do cd ${_pwd}/${_d}/..; printf '===> '; pwd; git ${args}; done; cd ${_pwd}; }; f"
 	sync = "!f() { while(true); do git pull --rebase -q; git push -q; sleep 1; done; }; f"
