--- a/.todo.cfg
+++ b/.todo.cfg
@@ -3,12 +3,12 @@
 # Your todo.txt directory (this should be an absolute path)
 #export TODO_DIR="/Users/gina/Documents/todo"
 # export TODO_DIR=$(dirname "$0")
-export TODO_DIR="$HOME/kDrive"
+export TODO_DIR="$HOME/kDrive/GTD"
 
 # Your todo/done/report.txt locations
 export TODO_FILE="$TODO_DIR/todo.txt"
-export DONE_FILE="$TODO_DIR/done.txt"
-export REPORT_FILE="$TODO_DIR/report.txt"
+export DONE_FILE="$TODO_DIR/todo_done.txt"
+export REPORT_FILE="$TODO_DIR/todo_report.txt"
 
 # You can customize your actions directory location
 #export TODO_ACTIONS_DIR="$HOME/.todo.actions.d"
